<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/send"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/send_mess"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSendMultiple"
        android:layout_width="167dp"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="22dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/send_multiple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/retrieve"
        android:layout_width="114dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/retrieve_mess"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/send" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="87dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="192dp"
        android:gravity="center"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post" />

    <Button
        android:id="@+id/btnRetreiveAccountNos"
        android:layout_width="145dp"
        android:layout_height="61dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:text="@string/get_account_numbers_amp_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSendMultiple" />

    <Button
        android:id="@+id/post"
        android:layout_width="86dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/post"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btnSendMultiple"
        app:layout_constraintHorizontal_bias="0.617"
        app:layout_constraintStart_toEndOf="@+id/send"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="375dp"
        android:layout_height="61dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRetreiveAccountNos"
        app:layout_constraintVertical_bias="0.034" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="407dp"
        android:layout_height="370dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>